[gd_scene load_steps=3 format=3 uid="uid://dlrgh6wh813sq"]

[ext_resource type="Script" path="res://GUI/title_screen_menu.gd" id="1_0nlj2"]
[ext_resource type="Texture2D" uid="uid://e3dey430fdr5" path="res://Assets/Textures/Backgrounds/titlescreen1080p.jpg" id="1_uaqow"]

[node name="TitleScreenMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0nlj2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_uaqow")

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -68.0
offset_right = 35.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="StartButton" type="Button" parent="ButtonContainer" groups=["load_scene_trigger"]]
layout_mode = 2
size_flags_vertical = 3
text = "Start"

[node name="LoadButton" type="Button" parent="ButtonContainer" groups=["load_scene_trigger"]]
layout_mode = 2
text = "Load"

[node name="SettingsButton" type="Button" parent="ButtonContainer" groups=["load_scene_trigger"]]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "TitleScreenMenu"

[connection signal="pressed" from="ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
